Fix flipcard not transitioning properly. Fix team section column wrapping to next line due to margins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,8 +94,10 @@
 
 .team-member {
     background-color: #f9ecec;
-    margin: 5px;
+    margin: 0px;
     width: 100%;
+    background-clip: padding-box;
+    border: 10px solid transparent;
 }
 
 .team-photo {
